# SDLspline

./: CMakeLists.txt  README.md  main.c
